--- a/css/materialize.css
+++ b/css/materialize.css
@@ -9066,16 +9066,48 @@ input[type=range]::-ms-thumb {
   }
 }
 .slogan{
-  padding: 60px 0px 0px 0px;
+  padding: 25px 0px 0px 0px;
 }
-.imagen{
-  width: 50% !important;
-  float: left !important;
-  padding: 5px;
 }
-.post{
-  padding: 15px;
+
 }
 .iconos{
   vertical-align: middle !important;
+}
+.imagenpost{
+  margin-top: 15px;
+}
+.separador{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+@media only screen and (max-width: 500px) {
+
+  .s-left-align {
+    text-align: left;
+  }
+
+  .s-right-align {
+    text-align: right;
+  }
+
+  .s-center {
+    text-align: center;
+  }
+
+  .s-left {
+    float: left !important;
+  }
+
+  .s-right {
+    float: right !important;
+  }
+}
+body{
+  background-image: url(../img/fondo.jpg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100%;
 }
